코드 단순화. 로컬에서 되나 서버에서 안됨.

--- a/manifest.json
+++ b/manifest.json
@@ -18,10 +18,10 @@
         }
       },
       "events": {},
-      "functions": {},
-      "requests": {
-        "fetch_contact_info": {}
-      }
+      "functions": {
+        "getLastCallPayload": {}
+      },
+      "requests": {}
     }
   },
   "platform-version": "3.0",
