로컬잘되나 서버 문제 있음.

--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,7 @@
       }
     },
     "support_ticket": {
-      "events": {}
+      "events": []
     },
     "common": {
       "location": {
@@ -17,7 +17,7 @@
           "icon": "styles/images/icon.svg"
         }
       },
-      "events": {},
+      "events": [],
       "functions": {
         "getLastCallPayload": {}
       },
