아직도 안됨.

--- a/manifest.json
+++ b/manifest.json
@@ -14,14 +14,16 @@
       "location": {
         "full_page_app": {
           "url": "index.html",
-          "icon": "styles/images/icon.svg"
+          "icon": "styles/icon.svg"
         }
       },
       "events": [],
       "functions": {
         "getLastCallPayload": {}
       },
-      "requests": {}
+      "requests": {
+        "fetch_contact_info":{}
+      }
     }
   },
   "platform-version": "3.0",
